Since this is a replacement no need to turn off UseConcMarkSweepGC